[package]
name = "p2p-sending"
version = "0.1.0"
authors = ["roxxe"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.38"
env_logger = "0.8.2"
futures = "0.3.12"
iced = { version = "0.2.0", features = ["tokio"] }
tokio = { version = "1.1.0", features = ["full"] }

[profile.release]
opt-level = 'z'     # Optimize for size.
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = 'abort'     # Abort on panic
